# sindibad-task

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tickets.db
src/: main.py
src/application/services/: __init__.py  bot_service.py  tagging_service.py  ticket_service.py
src/application/use_cases/: __init__.py  get_tagging_explanation.py  get_ticket_details.py  list_tickets.py  process_message.py  update_ticket_status.py
src/domain/entities/: __init__.py  ticket.py
src/domain/value_objects/: __init__.py  confidence.py  tagging_result.py
src/infrastructure/database/: __init__.py  database_config.py  models.py  ticket_repository.py
src/infrastructure/external_services/: __init__.py  agentic_tagger.py  keyword_tagger.py
src/presentation/api/: __init__.py  dependencies.py  routes.py
src/presentation/web_ui/: __init__.py  chat.html  dashboard.py  index.html
